# Artificial_Intelligence_Msc

./: .dockerignore  .gitignore  README.md
TFM_education_ai_analytics/: .dockerignore  Dockerfile  Dockerfile.tf-builder  LICENSE  Makefile  README.md  append_cells.py  cleanup_modeling.py  docker-compose.yml  entrypoint.sh  meorita.txt  pyproject.toml  reorganize_project.py  temp_memoria.txt  test_gpu.py  update_export_cell.py
TFM_education_ai_analytics/.devcontainer/: devcontainer.json
TFM_education_ai_analytics/docs/: BLACKWELL_GPU.md  DOCKER_TUTORIAL.md  Memoria_TFM.docx  analisis_calidad_datos.md  conclusiones_eda.md  mkdocs.yml  ~$moria_TFM.docx  ~WRL0003.tmp  ~WRL0005.tmp  ~WRL0571.tmp  ~WRL2103.tmp  ~WRL2127.tmp  ~WRL2407.tmp  ~WRL3188.tmp  ~WRL3658.tmp
TFM_education_ai_analytics/docs/docs/: Planning.xlsx  index.md
TFM_education_ai_analytics/docs/related_scientifical_studies/: ComparativeAnalysisofRandomForestvsXGBoost.docx
TFM_education_ai_analytics/educational_ai_analytics/: 0_dataset.py  1_feature_engeniering_I.py  1_features.py  __init__.py  config.py  dataset.py  features.py  pipeline.py  plots.py  tf_runtime.py
TFM_education_ai_analytics/educational_ai_analytics/0_data/: 0_dataset.py
TFM_education_ai_analytics/educational_ai_analytics/1_features/: __main__.py  __transformer_main__.py  ae_uptow_features.py  check_features_integrity.py  day0_static_features.py  transformer_features_builder.py
TFM_education_ai_analytics/educational_ai_analytics/2_modeling/: params.py
TFM_education_ai_analytics/educational_ai_analytics/3_plots/: __init__.py  plot_ae.py  plot_clustering.py  plot_transformers.py  style.py
TFM_education_ai_analytics/educational_ai_analytics/modeling/: __init__.py  autoencoder.py  encode.py  generate_embeddings.py  params.py  predict.py  train.py  train_autoencoder.py  train_clustering.py  train_transformer.py
TFM_education_ai_analytics/educational_ai_analytics/plots/: plot_ae.py  plot_clustering.py  plot_transformers.py  style.py
TFM_education_ai_analytics/models/: ae_best_global.keras  ae_best_global_concat.keras  ae_best_global_dyn_weekid.keras  ae_last_global.keras  best_autoencoder.keras  best_autoencoder_v2.keras  best_static_autoencoder.keras  cluster_mapping.json  gmm_ae.joblib  scaler_latent_ae.joblib
TFM_education_ai_analytics/models/ae_models/: ae_best_global.keras  ae_last_global.keras
TFM_education_ai_analytics/models/clustering_models/: cluster_mapping.json  cluster_mapping_w01.json  cluster_mapping_w02.json  cluster_mapping_w03.json  cluster_mapping_w04.json  cluster_mapping_w05.json  cluster_mapping_w06.json  cluster_mapping_w07.json  cluster_mapping_w08.json  gmm_ae.joblib  (+71 more)
TFM_education_ai_analytics/notebooks/: 0__data_exploration.ipynb  2__audit_data_integrity.ipynb  3__autoencoder.ipynb  3__clustering_exploration.ipynb  4__clustering_exploration.ipynb  4__feature_engienering_II.ipynb  5__transformers_feature_engieneering.ipynb  6__transformers_Training.ipynb  III__autoencoder.ipynb  II__feature_engieniering_I.ipynb  IV__clustering_exploration.ipynb  IX__day0_risk_clustering.ipynb  I__data_exploration.ipynb  MISSING_VALUES_STRATEGY.md  VIII__synthetic_data_generation.ipynb  VII__Xai.ipynb  VII__Xai_transformer_dual.ipynb  VI__transformers_Training.ipynb  V__transformers_feature_engieneering.ipynb  X__actionable_decision_demo.ipynb  autoencoder.ipynb  clustering_explorationII.ipynb  clustering_final_analysis.ipynb  data_exploration.ipynb  feature_engieniering_I.ipynb  snippets.md
TFM_education_ai_analytics/references/: data_sources.md
TFM_education_ai_analytics/reports/: train_clustering_metrics.json
TFM_education_ai_analytics/scripts/: bench_tf220.sh  build_tf220_wheel.sh  check_tf_blackwell.sh  install_tf220_wheel.sh
(+699 files in other folders)
