[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "educational_ai_analytics"
version = "0.0.1"
description = "TFM word"
authors = [
  { name = "Michael Laudrup Luis Gonz\u00e1lez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["educational_ai_analytics"]
include = ["pyproject.toml", "educational_ai_analytics/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["educational_ai_analytics"]
force-sort-within-sections = true

