[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "educational_ai_analytics"
version = "0.0.1"
description = "TFM word"
authors = [
  { name = "Michael Laudrup Luis González" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "seaborn",
    "scipy",
    "shap",
    "scikit-learn",
    "tensorboard",
    "ipykernel",
    # --- Serialización y utilidades ---
    "joblib",
    "h5py",
    # --- Clustering Avanzado ---
    "umap-learn",
]
requires-python = ">=3.10"

  [project.optional-dependencies]
  tensorflow = [
    "tf-nightly[and-cuda]>=2.22.0.dev20260305",
  ]


[tool.ruff]
line-length = 99
src = ["educational_ai_analytics"]
include = ["pyproject.toml", "educational_ai_analytics/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["educational_ai_analytics"]
force-sort-within-sections = true
